--- a/.github/workflows/portfolio_workflow_v2.yaml
+++ b/.github/workflows/portfolio_workflow_v2.yaml
@@ -14,7 +14,20 @@ env:
         ./kubernetes/my-deployment.yaml
         ./kubernetes/my-service.yaml
 jobs:
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+        - name: Set up Java
+          uses: actions/setup-java@v2
+          with:
+            distribution: 'adopt'
+            java-version: '21'
+        - name: Build with Maven
+          run: mvn clean package
     buildImage:
+        needs: build
         permissions:
             contents: read
             id-token: write
