--- a/.github/workflows/portfolio_workflow_v2.yaml
+++ b/.github/workflows/portfolio_workflow_v2.yaml
@@ -9,7 +9,7 @@ env:
     AZURE_CONTAINER_REGISTRY: acrworkflow1702160600562
     CLUSTER_NAME: production
     CLUSTER_RESOURCE_GROUP: production
-    CONTAINER_NAME: image-workflow-1702160600562
+    CONTAINER_NAME: build-container
     DEPLOYMENT_MANIFEST_PATH: |
         ./kubernetes/my-deployment.yaml
         ./kubernetes/my-service.yaml
@@ -69,4 +69,4 @@ jobs:
                 action: deploy
                 images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
                 manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
-                namespace: namespace-workflow-1702160600562
+                namespace: default
