--- a/kubernetes/my-deployment.yaml
+++ b/kubernetes/my-deployment.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
       - name: portfolio-app
-        image: portfolio-image
+        image: WILL_I_BE_REPLACED
