adds ingress to workflow

--- a/.github/workflows/deploy_to_ota.yaml
+++ b/.github/workflows/deploy_to_ota.yaml
@@ -13,6 +13,7 @@ env:
     DEPLOYMENT_MANIFEST_PATH: |
         ./kubernetes/my-deployment.yaml
         ./kubernetes/my-service.yaml
+        ./kubernetes/my-ingress.yaml
 jobs:
     buildImage:
         permissions:
