--- a/kubernetes/my-ingress.yaml
+++ b/kubernetes/my-ingress.yaml
@@ -5,14 +5,12 @@ metadata:
   namespace: portfolio
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
