--- a/src/main/resources/config/career.yml
+++ b/src/main/resources/config/career.yml
@@ -1,7 +1,6 @@
 career:
   birthday: 09-12-1999
   professional-career-start-date: 01-09-2021
-  programming-start-date: 01-07-2018
   certificates:
     - title: Level 2 Certificate in ESOL International (Advanced)
       institution: Cambridge University Press & Assessment English
@@ -22,3 +21,6 @@ career:
     - title: Train De Trainer
       institution: ICM
       acquisitionDate: 01-07-2023
+  skills:
+    - name: Java
+      proficiency: 9
