--- a/src/main/resources/config/career.yml
+++ b/src/main/resources/config/career.yml
@@ -1,51 +1,27 @@
 career:
-  birthday:
-    day-of-month: 09
-    month: 12
-    year: 1999
-  programming-start-date:
-    day-of-month: 1
-    month: 7
-    year: 2018
-  professional-career-start-date:
-    day-of-month: 1
-    month: 09
-    year: 2021
+  birthday: 09-12-1999
+  programming-start-date: 01-07-2018
+  professional-career-start-date: 01-09-2021
   certificates:
     - title: Level 2 Certificate in ESOL International (Advanced)
       institution: Cambridge University Press & Assessment English
-      acquisitionDate:
-        day-of-month: 1
-        month: 6
-        year: 2016
+      acquisitionDate: 01-06-2016
 
     - title: M18 English A Language and Literature Higher Level
       institution: International Baccalaureate
-      acquisitionDate:
-        day-of-month: 1
-        month: 7
-        year: 2018
+      acquisitionDate: 01-07-2018
 
     - title: Bilingual VWO - Atheneum
       institution: Tabor College Werenfridus
-      acquisitionDate:
-        day-of-month: 2
-        month: 7
-        year: 2018
+      acquisitionDate: 02-07-2018
 
     - title: BSc Computer Science (7,7 GPA)
       institution: Vrije Universiteit Amsterdam
-      acquisitionDate:
-        day-of-month: 1
-        month: 08
-        year: 2021
+      acquisitionDate: 01-08-2021
 
     - title: Train De Trainer
       institution: ICM
-      acquisitionDate:
-        day-of-month: 1
-        month: 7
-        year: 2023
+      acquisitionDate: 01-07-2023
   skills:
     - name: Java
       proficiency: 9
