--- a/src/main/resources/config/career.yml
+++ b/src/main/resources/config/career.yml
@@ -57,8 +57,8 @@ career:
       start: 01-01-2015
       end: 01-06-2015
       icon:
-        classes: fas fa-regular fa-circle-play
-        style:
+        classes: fa-solid fa-flag-checkered fa-beat
+        style: "color: #149f2b;"
 
     - employer: McDonald’s
       job-title: Crew member
