rewords unused saying

--- a/src/main/resources/config/career.yml
+++ b/src/main/resources/config/career.yml
@@ -97,7 +97,7 @@ career:
     - employer: McDonald’s
       job-title: Crew member
       description:
-        I cut my teeth in the fast-food world at McDonald's — a crash course in fast-paced service,
+        I started my Horeca journey under the golden arches at McDonald's — a crash course in fast-paced service,
         teamwork, and the sizzling art of flipping burgers.
       start: 01-06-2015
       end: 01-01-2016
