--- a/kubernetes/my-deployment.yaml
+++ b/kubernetes/my-deployment.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: portfolio-app
-          image: portfolioProduction.azurecr.io/portfolio-image:latest
+          image: portfolioProduction.azurecr.io/portfolio:latest
