--- a/.github/workflows/deploy_main.yaml
+++ b/.github/workflows/deploy_main.yaml
@@ -17,7 +17,8 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest\
+    timeout-minutes: 3
     steps:
       - uses: actions/checkout@v3
       - name: Set up Java
@@ -41,6 +42,7 @@ jobs:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     needs:
       - buildImage
     steps:
