--- a/.github/workflows/deploy_to_ota.yaml
+++ b/.github/workflows/deploy_to_ota.yaml
@@ -15,6 +15,7 @@ jobs:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
       - uses: actions/checkout@v3
       - name: Set up Java
@@ -33,6 +34,7 @@ jobs:
       - name: Build and push image to ACR
         run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./Dockerfile ./
   deploy:
+    timeout-minutes: 3
     permissions:
       actions: read
       contents: read
