--- a/kubernetes/my-deployment.yaml
+++ b/kubernetes/my-deployment.yaml
@@ -15,3 +15,4 @@ spec:
       containers:
         - name: portfolio-app
           image: portfolioProduction.azurecr.io/portfolio:latest
+#TODO: RESOURCE LIMITS
