--- a/.github/workflows/deploy_main.yaml
+++ b/.github/workflows/deploy_main.yaml
@@ -6,7 +6,7 @@ name: deploy_main
   workflow_dispatch: { }
 env:
   ACR_RESOURCE_GROUP: production
-  AZURE_CONTAINER_REGISTRY: prodPortfolio
+  AZURE_CONTAINER_REGISTRY: prodportfolio
   CLUSTER_NAME: production
   CLUSTER_RESOURCE_GROUP: production
   CONTAINER_NAME: portfolio
