--- a/kubernetes/my-deployment.yaml
+++ b/kubernetes/my-deployment.yaml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
         - name: portfolio-app
-          image: prodportfolio.azurecr.io/portfolio:latest
+          image: prodPortfolio.azurecr.io/portfolio:latest
 #TODO: RESOURCE LIMITS
