--- a/src/main/resources/config/career.yml
+++ b/src/main/resources/config/career.yml
@@ -61,6 +61,9 @@ career:
     - name: Microservice architecture
       proficiency: 7
 
+    - name: Agile/Scrum
+      proficiency: 7
+
     - name: Kubernetes
       proficiency: 7
 
