--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -15,16 +15,16 @@ jobs:
           distribution: 'adopt'
           java-version: '21'
 
-      - name: Build with Maven
+      - name: build_with_maven
         run: mvn clean package
 
-      - name: Log in to Docker Hub
+      - name: login_to_docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_KEY }}
 
-      - name: Build and push Docker image
+      - name: push_to_docker
         uses: docker/build-push-action@v4
         with:
           context: .
