--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -28,6 +28,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./DockerfileRaspBerry
           push: true
           tags: phitiet/portfolio:latest
