--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +14,11 @@ jobs:
           distribution: 'adopt'
           java-version: '21'
 
+      - name: Set up Docker Buildx
+        run: |
+          docker buildx create --use
+          docker buildx inspect --bootstrap
+
       - name: build_with_maven
         run: mvn clean package
 
@@ -24,10 +28,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_KEY }}
 
-      - name: push_to_docker
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./DockerfileRaspBerry
-          push: true
-          tags: phitiet/portfolio:latest
+      - name: Build and Push image
+        run: |
+          docker buildx build \
+            --platform linux/arm64,linux/amd64 \
+            --tag ${{ secrets.DOCKER_USERNAME }}/portfolio:latest \
+            --push .
