--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -25,12 +25,13 @@ jobs:
       - name: login_to_docker
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_KEY }}
+          registry: ghcr.io
+          username: github.repository_owner
+          password: secrets.GITHUB_TOKEN
 
       - name: Build and Push image
         run: |
           docker buildx build \
             --platform linux/arm64,linux/amd64 \
-            --tag ${{ secrets.DOCKER_USERNAME }}/portfolio:latest \
+            --tag ${{github.repository}}:latest \
             --push .
