--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -27,8 +27,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: github.repository_owner
-          password: secrets.GITHUB_TOKEN
+          username: ${{github.repository_owner}}
+          password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build and Push image
         run: |
