--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -34,5 +34,5 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/arm64,linux/amd64 \
-            --tag ${{github.repository}}:latest \
+            --tag ghcr.io/${{github.repository}}:latest \
             --push .
