--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -33,6 +33,6 @@ jobs:
       - name: Build and Push image
         run: |
           docker buildx build \
-            --platform linux/arm64,linux/amd64 \
+            --platform linux/arm64 \
             --tag ghcr.io/phitiet/portfolio:latest \
             --push .
