--- a/.github/workflows/deploy_main_to_raspberry.yaml
+++ b/.github/workflows/deploy_main_to_raspberry.yaml
@@ -9,17 +9,16 @@ jobs:
     timeout-minutes: 3
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Java
+      - name: checkout_code
+        uses: actions/checkout@v4
+      - name: setup_java_21
         uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
           java-version: '21'
 
-      - name: Set up Docker Buildx
-        run: |
-          docker buildx create --use
-          docker buildx inspect --bootstrap
+      - name: setup_docker_buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: build_with_maven
         run: mvn clean package
@@ -31,9 +30,10 @@ jobs:
           username: ${{github.repository_owner}}
           password: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Build and Push image
-        run: |
-          docker buildx build \
-            --platform linux/arm64 \
-            --tag ghcr.io/phitiet/portfolio:latest \
-            --push .
+      - name: build_and_push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          context: .
+          platforms: linux/arm64
+          tags: ghcr.io/phitiet/portfolio:latest
