adds kotlin to skills

--- a/src/main/resources/config/career.yml
+++ b/src/main/resources/config/career.yml
@@ -57,6 +57,9 @@ career:
   skills:
     - name: Java
       proficiency: 9
+
+    - name: Kotlin
+      proficiency: 9
       
     - name: Microservice architecture
       proficiency: 7
