--- a/.github/workflows/build_main_and_push_to_ghcr.yaml
+++ b/.github/workflows/build_main_and_push_to_ghcr.yaml
@@ -1,7 +1,8 @@
 name: build_main_and_push_to_ghcr
 permissions:
-  contents: write
+  contents: read
   pull-requests: write
+  packages: write
 on:
   push:
     branches:
