--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,11 +2,17 @@
 
 version: 2
 updates:
-  - package-ecosystem: "maven"
-    directory: "/"
+  - package-ecosystem: maven
+    directory: /
     schedule:
-      interval: "daily"
-  - package-ecosystem: "github-actions"
-    directory: "/"
+      interval: daily
+
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "daily"
+      interval: daily
+
+  - package-ecosystem: npm
+    directory: /resources/static
+    schedule:
+      interval: daily
