--- a/.github/workflows/build_main_and_push_to_ghcr.yaml
+++ b/.github/workflows/build_main_and_push_to_ghcr.yaml
@@ -1,7 +1,7 @@
 name: build_main_and_push_to_ghcr
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   packages: write
 
@@ -23,8 +23,8 @@ jobs:
       - name: setup_java_21
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '21'
+          distribution: adopt
+          java-version: 21
 
       - name: build_with_maven
         run: mvn clean package
