--- a/.github/workflows/build_on_pr.yaml
+++ b/.github/workflows/build_on_pr.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: setup_java_21
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '21'
+          distribution: adopt
+          java-version: 21
 
       - name: build
         run: mvn clean verify
