factors out versions

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
 
     <properties>
         <java.version>21</java.version>
+        <thymeleaf-layout-dialect.version>3.4.0</thymeleaf-layout-dialect.version>
+        <equalsverifier.version>3.19.3</equalsverifier.version>
     </properties>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -42,7 +45,7 @@
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
-            <version>3.4.0</version>
+            <version>${thymeleaf-layout-dialect.version}</version>
         </dependency>
 
         <dependency>
@@ -63,7 +66,7 @@
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.19.3</version>
+            <version>${equalsverifier.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
