feat(ui): modernize portfolio with HTMX, Tailwind CSS 4 & Alpine.js
Complete redesign of the portfolio website from Bootstrap to a modern
stack while keeping the Spring Boot + Thymeleaf backend.

Frontend Stack:
- Tailwind CSS 4 (CDN) with custom theme variables
- Alpine.js 3.14.8 for reactive components
- HTMX 2.0.4 for dynamic interactions
- Inter font family

Sections Redesigned:
- Hero: Profile photo, animated greeting, CTAs, social links
- Skills: Grid layout with proficiency bars and highlight cards
- Timeline: Vertical alternating cards with expand/collapse
- Certificates: Card grid with type icons (education/language/pro)
- Recommendations: Alpine.js carousel with testimonial cards
- Hobbies: Photo gallery carousel, hobby grid, languages section
- Contact: Email, LinkedIn, GitHub contact cards
- Layout: Sticky blur navbar, mobile menu, scroll-to-top button

Enhancements:
- Enhanced SEO meta tags (Open Graph, Twitter, canonical)
- Lazy loading for gallery images
- Focus states and accessibility improvements
- Dark/light theme toggle preserved

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <java.version>21</java.version>
         <thymeleaf-layout-dialect.version>3.4.0</thymeleaf-layout-dialect.version>
         <equalsverifier.version>4.2.1</equalsverifier.version>
+        <htmx.version>2.0.4</htmx.version>
+        <alpinejs.version>3.14.8</alpinejs.version>
     </properties>
 
     <dependencies>
@@ -46,6 +48,17 @@
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>${thymeleaf-layout-dialect.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>htmx.org</artifactId>
+            <version>${htmx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>alpinejs</artifactId>
+            <version>${alpinejs.version}</version>
         </dependency>
 
         <dependency>
