--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -20,11 +20,11 @@ jobs:
       - name: checkout_code
         uses: actions/checkout@v6
 
-      - name: setup_java_21
+      - name: setup_java_25
         uses: actions/setup-java@v5
         with:
-          distribution: adopt
-          java-version: 21
+          distribution: temurin
+          java-version: 25
 
       - name: build_with_maven
         run: mvn clean package -B -T 4
