refactor: clean up backend with SOLID principles, DRY patterns, and test improvements
- Collapse CareerService interface/impl into single concrete service class
- Remove unused Mapper interface (YAGNI)
- Extract DatePatterns utility for shared date format constants
- Inject Clock for deterministic date handling in ToHomePageDetailsMapper
- Add final to classes and method parameters across production code
- Convert CareerServiceTest from @SpringBootTest to pure unit test
- Add @DisplayName to all test classes and methods
- Narrow exception handler from Throwable to Exception
- Replace @RequestMapping with @GetMapping in HomeController
- Wildcard static asset patterns in SecurityConfiguration
- Enable virtual threads, add @ConfigurationPropertiesScan
- Improve Dockerfile with .dockerignore and alpine base image
- Optimize GitHub Actions with Maven caching and timeout

--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -2,7 +2,6 @@ name: build_and_publish
 
 permissions:
   contents: read
-  pull-requests: write
   packages: write
 
 on:
@@ -25,6 +24,7 @@ jobs:
         with:
           distribution: temurin
           java-version: 25
+          cache: maven
 
       - name: build_with_maven
         run: mvn clean package -B -T 4
@@ -41,4 +41,6 @@ jobs:
         with:
           push: true
           context: .
-          tags: ghcr.io/phitiet/portfolio:latest
+          tags: |
+            ghcr.io/phitiet/portfolio:latest
+            ghcr.io/phitiet/portfolio:${{ github.sha }}
