--- a/.github/workflows/build_on_pr.yaml
+++ b/.github/workflows/build_on_pr.yaml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +23,7 @@ jobs:
         with:
           distribution: temurin
           java-version: 25
+          cache: maven
 
       - name: build
         run: mvn clean verify
