--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -2,7 +2,6 @@ name: build_and_publish
 
 permissions:
   contents: read
-  pull-requests: write
   packages: write
 
 on:
@@ -28,7 +27,7 @@ jobs:
           cache: maven
 
       - name: build_with_maven
-        run: mvn clean package -B -T 4
+        run: mvn clean verify -B -T 4
 
       - name: login_to_docker
         uses: docker/login-action@v3
@@ -37,9 +36,16 @@ jobs:
           username: ${{github.repository_owner}}
           password: ${{secrets.GITHUB_TOKEN}}
 
+      - name: setup_buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: build_and_push
         uses: docker/build-push-action@v6
         with:
           push: true
           context: .
-          tags: ghcr.io/phitiet/portfolio:latest
+          tags: |
+            ghcr.io/phitiet/portfolio:latest
+            ghcr.io/phitiet/portfolio:${{github.sha}}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
