feat: split career data into per-locale YAML files with locale-aware service
Replace single career.yml with career-en.yml and career-nl.yml for
localized events, hobbies, skills, and certificates. CareerService now
selects the correct properties bean based on the request locale with
English as fallback.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,6 @@ spring:
   threads.virtual.enabled: true
   config:
     import:
-      - classpath:/config/career.yml
+      - classpath:/config/career-en.yml
+      - classpath:/config/career-nl.yml
+      - classpath:/config/recommendations.yml
