revert: restore original Celine description text

--- a/src/main/resources/config/career-en.yml
+++ b/src/main/resources/config/career-en.yml
@@ -164,10 +164,10 @@ career-en:
 
     - employer: Lunchroom Cafetaria Celine
       job-title: All-around employee
-      description: I worked very hard under a strict owner to become disciplined, efficient, and resourceful — a
-        person with a strong work ethic. Turns out, navigating the Horeca world was a whole different ballgame compared
-        to my McDonald's days. It added layers to my experience, revealing the challenges and flavors of the
-        hospitality industry.
+      description: I worked very hard under a strict owner to become disciplined, efficient and handy as a person with
+        a good work ethic. Turns out, navigating the Horeca world was a whole different ballgame compared to my
+        McDonald's days. It added layers to my experience, revealing the challenges and flavors of
+        the hospitality industry
       start: 01-01-2016
       end: 01-01-2020
       icon:
