revert: restore original Qualogy description text

--- a/src/main/resources/config/career-en.yml
+++ b/src/main/resources/config/career-en.yml
@@ -211,8 +211,8 @@ career-en:
 
     - employer: Qualogy
       job-title: Medior Software Engineer
-      description: My consultancy career continued at Qualogy, where I served as a Medior Java Software Engineer.
-        I valued the diverse assignments and opportunities Qualogy provided.
+      description: My consultancy career continues as I love my current role as Medior Java Software Engineer at Qualogy.
+        I'm excited for the amazing assignments Qualogy has in store for me!
       start: 01-04-2024
       end:
       icon:
